--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -8,13 +8,16 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
 
   datasource:
     driver-class-name: org.h2.Driver
     username: sa
     password:
     hikari:
-      jdbc-url: jdbc:h2:mem:elog;MODE=MySQL
+      jdbc-url: jdbc:h2:mem:elog;MODE=MySQL;DB_CLOSE_ON_EXIT=FALSE
 
   redis:
     host: localhost
