--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,10 +7,11 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
+        use_sql_comments: true
 
   datasource:
     driver-class-name: org.h2.Driver
