@VersionController setting (Not complete) , BoardDelete 구현중
- @VersionController 설정 위해서 apiversion Package  생성 
         ( WebConfig 오류 잡아주세요!!) 
 -BoardDelete 구현 (return 에 어떤 것을 태워 보낼지 어떻게 보낼지 고민입니다. )

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'org.flywaydb:flyway-core'
     implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
     implementation 'com.querydsl:querydsl-jpa'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
